Version 0.15
============

Released ?????? ??, ????

- Typechecking implementation, first release (HolidayBase, utils, some sample countries) #661 (dimbleby)
- US fixes #675 (arkid15r)
- UA refactoring #681 (kasya)

Version 0.14.2
==============

Released June 5, 2022

- Drop support for EOL Python 3.6 #328 (hugovk, dr-p)
- Package review #662 (dimbleby)
- Added financial markets support: ECB and NYSE, list_supported_financial() method (dr-p)
- Support for NY Stock Exchange #651, #458 (nadime, dr-p)
- Support for Malta #612, #630 (rafelbev)
- Support for Madagascar #656 (fav007)
- Support for Cyprus #410, #665 (digidestination, avnigo)
- Ireland as standalone country #636, #639 (TeoTN, dr-p, javicalle)
- Australia fixes #631 (jeremychrimes)
- Singapore updates #652 (mborsetti)
- Saudi Arabia fixes #642 (OsaydAbdu)
- Spain fixes #634 (javicalle)
- US fixes #648 (dashdrum)
- Greece fixes #659 (tudorvaran)
- India doc fixes #657 (dr-p)
- Poland fix #663 (kfsz)


Version 0.13
============

Released February 15, 2022

- New subdivision parameter (subdiv), prov/state deprecation #608, #597, #374 (mborsetti)
- CountryHoliday class deprecation (replaced by country_holidays) (mborsetti, dr-p)
- Sphinx documentation #600, #601, #602 (mborsetti)
- Integration of mypy in pre-commit #620 (mborsetti)
- Wrong year expansion fix #586, #606, #625 (mborsetti, TeejMonster, dr-p)
- Refactoring / cleanups / code and naming reviews (mborsetti)
- Support for Uzbekistan #593 (slako, dr-p)
- Italy fixes/improvements #617, #614 (energywave)
- Spain improvements #580, #603, #624 (gtrabanco, delaosa, dr-p)
- UAE updates (weekend change) #609 (marcomasulli, dr-p)
- India updates #548 (mborsetti)
- US fixes #594, #595, #619 (apicht, SudoRob, dr-p)
- UK fixes #587 (mborsetti)
- Russia fixes #582 (Enzokot)
- Type hints fixes #589 (mborsetti)

Version 0.12
============

Released January 4, 2022

- Copyright update 2022
- Sphinx documentation stub (mborsetti, dr-p)