@@ -12,7 +12,7 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v3.1.0
+        uses: actions/setup-python@v4.1.0
       - name: Run pre-commit
         uses: pre-commit/action@v2.0.3
 
@@ -28,7 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3.1.0
+        uses: actions/setup-python@v4.1.0
         with:
           python-version: ${{ matrix.python-version }}
           cache: pip
@@ -68,7 +68,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.9
-        uses: actions/setup-python@v3.1.0
+        uses: actions/setup-python@v4.1.0
         with:
           python-version: "3.10"
       - name: Install dependencies
